--- a/OrdinalModels.Rmd
+++ b/OrdinalModels.Rmd
@@ -40,7 +40,7 @@ nyc_clean2 <- nyc_clean %>%
 
 
 ```{r}
-data_split <- initial_split(nyc_clean2, prop = .7) 
+data_split <- initial_split(nyc_clean2, prop = .8) 
 data_train <- training(data_split)
 data_test <- testing(data_split) 
 
@@ -56,26 +56,26 @@ model1 <- stan_polr(transportation_desert_4num ~   mean_income + unemployment_pe
 model2 <- stan_polr(transportation_desert_4num ~ mean_income + below_poverty_perc + eviction_count + store_count, data =data_train, prior=R2(0.5),iter=500, seed = 86437, refresh=0, prior_PD=FALSE)
 # saveRDS(model2, 'ordinal_model_2.rds')
 
-model3 <- stan_polr(transportation_desert_4num~ store_count+ mean_rent+ mean_income+ below_poverty_perc, data =nyc_clean2, prior=NULL,iter=500, seed = 86437, refresh=0, prior_PD=FALSE)
+model3 <- stan_polr(transportation_desert_4num~ store_count+ mean_rent+ mean_income+ below_poverty_perc, data =data_train, prior=NULL,iter=500, seed = 86437, refresh=0, prior_PD=FALSE)
 ```
 
 ## PP check and Tidy
 ```{r}
 # summary(model1)
 
-pp_check(model1)
-pp_check(model2)
-pp_check(model3)
+# pp_check(model1)
+# pp_check(model2)
+# pp_check(model3)
 
 # tidy(model1, effects = "fixed", conf.int = TRUE, conf.level = 0.8)
 # tidy(model2, effects = "fixed", conf.int = TRUE, conf.level = 0.8)
 tidy(model3, effects = "fixed", conf.int = TRUE, conf.level = 0.8)
 
-summary_table <- coef(model2)
-
-pval <- pnorm(abs(summary_table[, "t value"]),lower.tail = FALSE)* 2
-summary_table <- cbind(summary_table, "p value" = round(pval,3))
-summary_table
+# summary_table <- coef(model2)
+# 
+# pval <- pnorm(abs(summary_table[, "t value"]),lower.tail = FALSE)* 2
+# summary_table <- cbind(summary_table, "p value" = round(pval,3))
+# summary_table
 ```
 
 ```{r}
@@ -86,10 +86,10 @@ ordinal_accuracy<-function(post_preds,mydata){
     results[j]<-as.numeric(tail(names(sort(table(post_preds[,j]))))[4])
     }
   results<-as.data.frame(results)
-  compare<-cbind(results,mydata$transportation_desert_4num)
-  compare<-compare %>%mutate(results=as.numeric(results))
-  compare<-compare %>% mutate(`mydata$transportation_desert_4num`=as.numeric(`mydata$transportation_desert_4num`))
-  compare<-compare %>%mutate(accuracy=ifelse(as.numeric(results)==as.numeric(`mydata$transportation_desert_4num`),1,0))
+  compare<-cbind(results,mydata$transportation_desert_4num) %>%
+    mutate(results=as.numeric(results)) %>%
+    mutate(`mydata$transportation_desert_4num`=as.numeric(`mydata$transportation_desert_4num`))%>%
+    mutate(accuracy=ifelse(as.numeric(results)==as.numeric(`mydata$transportation_desert_4num`),1,0))
   print(sum(compare$accuracy)/length(post_preds))
 }
 ```
@@ -151,7 +151,7 @@ pred <- posterior_predict(
     
 ```
 
-```{r}
+```{r, eval=false}
 df <- as.data.frame(my_prediction2)
 
 
@@ -169,7 +169,7 @@ aggregated_df <- aggregated_df[-1,]
 names(sort(-table(df[1])))[1]
 
 
-for (i in 1:55) {
+for (i in 1:36) {
   highestPred <- names(sort(-table(df[i])))[1]
   actual <- data_test$transportation_desert_4num[i]
   newdf <- data.frame(highestPred, actual)
@@ -187,6 +187,40 @@ ggplot(aggregated_df, aes(x=actual, y=value, fill=highestPred)) + geom_bar(posit
 ```
 
 ```{r}
-ggplot(nyc_clean2, aes(x=perc_covered_by_traansit)) + geom_density()
+prediction_long <- my_prediction3 %>% 
+  t() %>% 
+  as.tibble() %>%
+  mutate_if(is.character, as.numeric) %>%
+  rownames_to_column() %>% 
+  rowwise(id=rowname) %>%
+  summarize(median=ifelse(mean(c_across(where(is.numeric)))>3.5, ceiling(mean(c_across(where(is.numeric)))), floor(mean(c_across(where(is.numeric)))))) %>%
+  rename(predicted_desert = median)%>%
+  mutate(predicted_desert = case_when(
+    predicted_desert==1 ~ "Poor",
+    predicted_desert ==2 ~ "Limited",
+    predicted_desert ==3 ~ "Satisfactory",
+    TRUE ~ "Excellent",
+  ))  %>%
+  mutate(predicted_desert = factor(predicted_desert, levels=c("Poor", "Limited", "Satisfactory", "Excellent")))
+
+data_test %>%
+  select(nta_id, borough, transportation_desert_4cat) %>%
+  rownames_to_column() %>%
+  left_join(., prediction_long, by="rowname") %>%
+  
+  ggplot(aes(x=transportation_desert_4cat, fill=predicted_desert)) + 
+  geom_bar(position="fill")+
+  scale_y_continuous(labels = seq(0, 100, by = 25)) +
+  labs(title="Accessibility Predictions by Observed Category", y="Proportion", x="")+
+    theme(panel.grid.major.x = element_line("transparent"),
+         # axis.text.y.left = element_blank(),
+          axis.text.x.bottom = element_text(size = 12, face = "bold"),
+          plot.title = element_text(family="DIN Condensed", size =20, hjust=.5, face = "bold")) +
+   scale_fill_manual(values=c("#895F32","#E9DBC2","#7D9B8A", "#395645"),
+                       guide = guide_legend(title = "Subway Accessibility \nCategory"), na.value="#D6D6D6")
 ```
 
+
+```{r}
+ggplot(nyc_clean2, aes(x=perc_covered_by_traansit)) + geom_density()
+```
