--- a/checkpoint/CH5.Rmd
+++ b/checkpoint/CH5.Rmd
@@ -798,26 +798,36 @@ Our next section details the statistical models we used to better characterize t
 ## Non-Hierarchical Models
 ### Bayesian Model Specification
 
-In order to understand the respective distributions of immigrant population size, evictions, and mean rental prices in NYC, we fit 3 non-hierarchical Bayesian models with each variable as an outcome. In previous iterations, we fit hierarchical models on these same relationships where neighborhood values were grouped by borough. We initially felt that the internal diversity of boroughs with respect to housing, demographics, and wealth made it more appropriate as a grouping variable since it did not cary a coherent set of effects. However, we ultimately saw that the non-hierarchical models we fit were largely comparable to their hierarchical counterparts. Additionally, we found that borough-level policies and housing plans did have meaningful effects on eviction and rental prices. As such, we have decided it should be considered as a covariate we adjust for, rather than a grouping variable.
+In order to understand the respective distributions of immigrant population size, evictions, and mean rental prices in NYC, we fit 3 non-hierarchical Bayesian models with each variable as an outcome. In the following section, we fit hierarchical regression models with similar likelihood and prior structure. However, in those models neighborhood values are grouped by borough. 
 
 We list our non-hierarchical models and their predictors below:
 
+
 - Non-Citizen Count Model (1)		
-  + Predictors: `transportation_desert_4cat`, `total_pop`, `borough`, `gini_neighborhood`, `mean_income`, `mean_rent`, `unemployment_perc`, `black_perc`, `latinx_perc`, `asian_perc`
+  + Predictors: `transportation_desert_4cat`, `borough`, `total_pop`, `gini_neighborhood`, `mean_income`, `mean_rent`, `unemployment_perc`, `black_perc`, `latinx_perc`, `asian_perc`
+  + Symbolic Equivalents: `$x_1, x_2, ..., x_{14}$`
 
 - Average Rental Price Model (2)
-  + Predictors: `transportation_desert_4cat`, `borough`, `gini_neighborhood`, `mean_income`, `black_perc`, `latinx_perc`, `asian_perc`, `bus_count`,`school_count`,`store_count`, `noncitizen_perc`
+  + Predictors: `transportation_desert_4cat`, `borough`, `gini_neighborhood`, `mean_income`, `black_perc`, `latinx_perc`, `asian_perc`, `bus_count`,`school_count`,`store_count`
+  + Symbolic Equivalents: `$x_1, x_2, ..., x_{14}$`
+  
   
 - Eviction Count Model (3)
-  + Predictors: `transportation_desert_4cat`, `total_pop`, `borough`, `gini_neighborhood`, `mean_income`, `mean_rent`, `black_perc`, `latinx_perc`, `asian_perc`,
-  `bus_count`,`store_count`,`unemployment_perc`, `uninsured_perc`
+  + Predictors: `transportation_desert_4cat`, `borough`, `total_pop`,
+  `below_poverty_line_perc`, `gini_neighborhood`, `mean_income`, `mean_rent`, 
+  `black_perc`, `latinx_perc`, `asian_perc`
+  + Symbolic Equivalents: `$x_1, x_2, ..., x_{14}$`
   
 
-Across all models we specified normal priors for the `$\beta_{k}$`s associated with each predictor. 
+Because there are four levels of both `transportation_desert_4cat` and `borough`, `stan_glm` defines  `$x_1, \dots, x_3$` and `$x_5, \dots, x_7$` as dummy variables of each respective predictor's categories, with one common reference category for our intercept.
+  
+Across all models we specified weakly-informative normal priors for the `$\beta_{k}$`s associated with each predictor $X_{k}$. However, there are differences in terms of model specifications that we outline below:
 
-For 1 and 3, we used weakly informative normal priors on all predictors and the intercept, then allowed `stan_glm` to estimate initial priors. This decision was ultimately due to our unfamiliarity with NYC's history of evictions and non-citizen population. We also fit other versions of models 1 and 2 that specified a Poisson distribution of eviction and non-citizen counts. However, we observed an inconsistent spread of variance and increased 0 counts in both the eviction and immigrant count data and ultimately decided that a Negative-Binomial distribution was more appropriate. As such, we have removed these Poisson-distributed models from our discussion here.
+For 1 and 3, we used weakly informative normal priors on all predictors and the intercept, then allowed `stan_glm` to estimate initial priors. This decision was ultimately due to our unfamiliarity with NYC's history of evictions and non-citizen population and what their relationships to our predictors may be.
 
-For Model 2, we also used weakly informative normal priors on all predictors. However, we specified a normal prior with `$\mu = 600$` and `$\sigma = 20$` for the intercept of mean rental prices. We chose these parameters specifically using previous experience as renters both in NYC and other comparable major cities. 
+We fit parallels of 1 and 3 that both had a Poisson likelihood, as opposed to a Negative Binomial likelihood in previous iterations of this report. However, we observed an inconsistent spread of variance and increased 0 counts in both the eviction and immigrant count data. Because `stan_glm` does not have a zero-inflated poisson distribution, we ultimately performed two Negative-Binomial regressions. Further discussions of our Poisson regressions have been removed from this project.
+
+For 2, we also used weakly informative normal priors on all predictors. However, we specified a normal prior with `$\mu = 600$` and `$\sigma = 20$` for the scaled intercept of mean rental prices. 
 
 Our model specifications are detailed in the following subsections
 
@@ -835,7 +845,8 @@ modeling_data <- nyc_compiled  %>%
   mutate(mean_income = mean_income / 100) %>%
   mutate(mean_rent = mean_rent / 100) %>%
   filter(nta_type==0) %>%
-  mutate(nta_type = as.factor(nta_type))
+  mutate(nta_type = as.factor(nta_type)) %>%
+  mutate(borough = as.factor(borough))
 ```
 
 
@@ -843,76 +854,98 @@ modeling_data <- nyc_compiled  %>%
 noncit_model <- stan_glm(
   noncitizen_count ~
     transportation_desert_4cat + 
-    total_pop + borough + gini_neighborhood + 
+     borough + total_pop + gini_neighborhood + 
     mean_income + mean_rent + unemployment_perc + 
     black_perc + latinx_perc + asian_perc,
   data = modeling_data,
   family = neg_binomial_2,
   chains = 4, iter = 1000*2, seed = 84735, refresh = 0
 )
-
 ```
 
-$$\begin{split}
-\text{Non-Citizen Count} \mid  \beta_{0c}, \beta_1, ..., \beta_k, r & \sim \text{NegBin}(\mu, r) \; \; \; \; \text{where} \log(\mu) = \beta_{0c} + \sum^{14}_{k=1}X_{k}\beta_k \\
-\beta_{0c} &\sim N(0,2.5^2)\\				
-\beta_{1} &\sim N(0,6.2785^2)\\				
-\beta_{2} &\sim N(0,6.7918^2)\\				
-\beta_{3} &\sim N(0,5.0879^2)\\				
-\beta_{4} &\sim N(0, 0.0001^2)\\				
-\beta_{5} &\sim N(0,5.5216^2)\\				
-\beta_{6} &\sim N(0,6.5781^2)\\				
-\beta_{7} &\sim N(0,5.2519^2)\\				
-\beta_{8} &\sim N(0,56.96^2)\\				
-\beta_{9} &\sim N(0,0.006^2)\\				
-\beta_{10} &\sim N(0,0.3317^2)\\	
-\beta_{11} &\sim N(0,7.3986^2)\\				
-\beta_{12} &\sim N(0,0.9779^2)\\				
-\beta_{13} &\sim N(0,1.0952^2)\\				
-\beta_{14} &\sim N(0,1.638^2)\\				
-r & \sim Exp(1) \\
-\end{split}$$
+`$$
+\begin{split}
+\text{Non-Citizen Count}_{i} \mid  \beta_{0c}, \beta_1, ..., \beta_k, r & \sim \text{NegBin}(\mu_i, r) \; \; \; \text{where } \log(\mu_i) = \beta_{0c} + \sum^{14}_{k=1} \beta_{k}X_{ik} \\
+\beta_{0c} &\sim N(0,2.5^2)\\	
+r &\sim \text{Exp}(1)\\
+\beta_{k} &\sim N(0,s_k^2) 
+\end{split}
+$$`
+
+`$\text{and where}$`
+
+`$$
+\begin{align}
+s_k \in \{
+&5.5004,				
+7.9328,				
+4.9972,				
+5.4697,				
+6.443,				
+5.3347,				
+.0001,	\\			
+&56.9002,				
+0.0074,				
+0.5699,
+39.9937,				
+0.993,				
+1.142,				
+1.6003
+\}
+\end{align}
+$$`
+
 
 #### Model 2: Mean Neighborhood Rental Prices
+
+`transportation_desert_4cat`, `borough`, `gini_neighborhood`, `mean_income`, `black_perc`, `latinx_perc`, `asian_perc`, `bus_count`,`school_count`,`store_count``
 
 ```{r}
 rent_model <- stan_glm(
   mean_rent  ~ 
-  transportation_desert_4cat + 
-    bus_count + school_count + store_count +
-    total_pop + borough + 
-    gini_neighborhood + mean_income + black_perc + latinx_perc + asian_perc,
+  transportation_desert_4cat + borough + gini_neighborhood +
+    mean_income + black_perc + latinx_perc + asian_perc+
+    bus_count + school_count + store_count,
   data = modeling_data, 
   family = gaussian,
-  prior_intercept = normal(1600 , 10),
+  prior_intercept = normal(1600 , 20),
   chains = 4, iter = 1000*2, seed = 84735, refresh = 0
 )
-tidy(rent_model, conf.int = TRUE, conf.level = 0.8)
-
 ```
 
-$$\begin{split}
-\text{Mean Rent} \mid  \beta_{0c}, \beta_1, ..., \beta_k, r & \sim \text{Normal}(\mu, \sigma) \; \; \; \; \text{where} \mu = \beta_{0c} + \sum^{14}_{k=1}X_{k}\beta_k \\
-\beta_ {0c} &\sim N(1600,20^2)\\				
-\beta_{1} &\sim N(0,47.315^2)\\				
-\beta_{2} &\sim N(0,51.1837^2)\\				
-\beta_{3} &\sim N(0,38.3432^2)\\				
-\beta_{4} &\sim N(0,0.4958^2)\\				
-\beta_{5} &\sim N(0,2.9378^2)\\				
-\beta_{6} &\sim N(0,0.4371^2)\\				
-\beta_{7} &\sim N(0,0.0008^2)\\				
-\beta_{8} &\sim N(0,41.6113^2)\\				
-\beta_{9} &\sim N(0,49.5728^2)\\				
-\beta_{10} &\sim N(0,39.5783^2)\\
-\beta_{11} &\sim N(0,429.2544^2)\\				
-\beta_{12} &\sim N(0,0.0454^2)\\				
-\beta_{13} &\sim N(0,7.3695^2)\\				
-\beta_{14} &\sim N(0,8.2532^2)\\				
-\beta_{15} &\sim N(0,12.3441^2)\\
-\sigma & \sim Exp(0.13) \\
-\end{split}$$
+`$$
+\begin{split}
+\text{Mean Rental Price}_{i} \mid  \beta_{0c}, \beta_1, ..., \beta_k, r & \sim \text{N}(\mu_i, \sigma^2) \; \; \; \; \text{where } \mu_i = \beta_{0c} + \sum^{14}_{k=1} \beta_{k}X_{ik} \\
+\beta_{0c} &\sim N(1600,20^2)\\	
+\sigma &\sim \text{Exp}(0.23)\\
+\beta_{k} &\sim N(0,s_k^2)
+\end{split}
+$$`
 
-We chose our prior specifications of mean rental price (`$\beta_{0c}$`) using Juthi’s experience renting in NYC and a group conversation about typical rental prices we would elect to pay in NYC, Los Angeles, and other major cities we have lived in or around. 
+`$\text{and where}$`
+
+`$$
+\begin{align}
+s_k \in \{
+&24.1301,				
+34.8009,				
+21.9225,				
+23.9953,				
+28.2651,				
+23.403,			
+249.6185,		\\		
+&0.0325,				
+4.3562,				
+5.0098,
+7.0204,				
+0.316,				
+1.716,				
+0.2803
+\}
+\end{align}
+$$`
+
+Once again note that we are specifying the parameters of our scaled intercept prior, `$\beta_{0c}$`, so that the the typical mean neighborhood rental price `$\sim $N(1600,20^2)$`, while our priors for the $\beta_k$ are weakly-informed negative priors. We chose our prior intercept specifications of mean rental price (`$\beta_{0c}$`) using Juthi’s experience renting in NYC and a group conversation about typical rental prices we would elect to pay in NYC, Los Angeles, and other major cities we have lived in or around. However, we decided to continue using weakly-informative normal priors for the predictors because we were unsure about their relationship— if any— to rental prices.
 
 
 #### Model 3: Eviction Count
@@ -920,9 +953,8 @@ We chose our prior specifications of mean rental price (`$\beta_{0c}$`) using Ju
 ```{r}
 eviction_model <- stan_glm(
   eviction_count  ~ 
-    transportation_desert_4cat +
-    total_pop + borough + 
-    gini_neighborhood + mean_income +  mean_rent + 
+    transportation_desert_4cat + borough + total_pop +
+    below_poverty_line_perc + gini_neighborhood + mean_income + mean_rent+ 
     black_perc + latinx_perc + asian_perc,
   data = modeling_data, 
   family = neg_binomial_2,
@@ -930,24 +962,38 @@ eviction_model <- stan_glm(
 )
 ```
 
-$$\begin{split}
-\text{Eviction Count} \mid  \beta_{0c}, \beta_1, ..., \beta_k, r & \sim \text{NegBin}(\mu, r) \; \; \; \; \text{where} \log(\mu) = \beta_{0c} + \sum^{14}_{k=1}X_{k}\beta_k \\
-\beta_{0c} &\sim N(0,2.5^2)\\				
-\beta_{1} &\sim N(0,6.2992^2)\\				
-\beta_{2} &\sim N(0,6.7813^2)\\				
-\beta_{3} &\sim N(0,4.9972^2)\\				
-\beta_{4} &\sim N(0,1e-04^2)\\				
-\beta_{5} &\sim N(0,5.4697^2)\\				
-\beta_{6} &\sim N(0,6.443^2)\\				
-\beta_{7} &\sim N(0,5.3347^2)\\				
-\beta_{8} &\sim N(0,56.9002^2)\\				
-\beta_{9} &\sim N(0,0.0074^2)\\				
-\beta_{10} &\sim N(0,0.5699^2)\\
-\beta_{11} &\sim N(0,0.993^2)\\				
-\beta_{12} &\sim N(0,1.142^2)\\				
-\beta_{13} &\sim N(0,1.6003^2)\\	
-r & \sim Exp(1) \\
-\end{split}$$
+
+`$$
+\begin{split}
+\text{Eviction Count}_{i} \mid  \beta_{0c}, \beta_1, ..., \beta_k, r & \sim \text{NegBin}(\mu_i, r) \; \; \; \text{where } \log(\mu_i) = \beta_{0c} + \sum^{14}_{k=1} \beta_{k}X_{ik} \\
+\beta_{0c} &\sim N(0,2.5^2)\\	
+r &\sim \text{Exp}(1)\\
+\beta_{k} &\sim N(0,s_k^2) 
+\end{split}
+$$`
+
+`$\text{and where}$`
+
+`$$
+\begin{align}
+s_k \in \{
+&5.5004,				
+7.9328,				
+4.9972,				
+5.4697,				
+6.443,				
+5.3347,				
+.0001, \\			
+&25.1032,				
+56.9002,				
+0.0074,				
+0.5699,				
+0.993,				
+1.142,				
+1.6003
+\}
+\end{align}
+$$`
 
 In the following sections, we go through each particular model's outcome and what they tell us about the relationships between transportation and housing.
 
@@ -961,6 +1007,8 @@ pp_check(noncit_model)+
   labs(title = "Negative Binomial Model of \nImmigrant/Non-Citizen Count")+
   theme(plot.title =  element_text(family="DIN Condensed", face="bold", size=25, hjust=.5)) 
 ```
+
+It seems that our simulations (light green) of non-citizen count distributions were largely consistent across our iterations. However, our simulations were relatively biased from the observed non-citizen counts where we would typically predict smaller non-citizen counts more frequently. Additionally, it seemed that variance between simulations increased as non-citizen counts increased. Acknowledging these trends, our negative-binomial model seems to be a pretty good distributional fit, but could certainly be improved upon! 
 
 ```{r, fig.height=6, fig.width=12}
 non_citizen_clean <- modeling_data %>%
@@ -981,7 +1029,7 @@ ppc_intervals_grouped(
   group = list$borough,
   yrep = predictions_non_citizen,
   prob_outer = 0.8,
-  facet_args=list(scales="free")) +
+  facet_args=list(scales="free_x")) +
   
   scale_x_continuous(
     labels = list$nta_id,
@@ -1004,10 +1052,9 @@ ppc_intervals_grouped(
                                     face = "bold"))
 ```
 
-```{r}
-modeling_data <- modeling_data %>%
-  mutate(borough = as.factor(borough))
-```
+The above posterior prediction intervals plot the observed non-immigrant count in a New York residential neighborhood in one of the five boroughs. We faceted by borough to see if there were systematic biases in our predictions that would make our analyses inapplicable to a particular borough. For the most part, our predictions seem good! However, it seems that the observed counts are closest to our posterior prediction prediction medians in Queens and Brooklyn and that our observed counts move away from the posterior prediction means and either into the 50% and 80% credible intervals as eviction counts increase.
+
+
 
 ```{r}
 tidy(noncit_model, effects = "fixed", conf.int = TRUE, conf.level = 0.8)%>% 
@@ -1050,6 +1097,9 @@ pp_check(rent_model)+
   theme(plot.title =  element_text(family="DIN Condensed", face="bold", size=25, hjust=.5)) 
 ```
 
+Our simulations are relatively consistent. However, these simulated distributions are much more variable than the simulated distributions we saw in our non-citizen rent model. Importantly, it also seems our simulated normal posterior distributions had higher variance than what was observed and that is likely because the mean rental prices themselves are not perfectly normally distributed. Theoretically, we could change our likelihood model to adjust for the skew, but for now this is good!
+
+
 ```{r, fig.height=6, fig.width=12}
 rent_clean <- modeling_data %>%
   na.omit()%>%
@@ -1070,7 +1120,7 @@ ppc_intervals_grouped(
   group = list$borough,
   yrep = predictions_rent,
   prob_outer = 0.8,
-  facet_args=list(scales="free")) +
+  facet_args=list(scales="free_x")) +
   
   scale_x_continuous(
     labels = list$nta_id,
@@ -1093,7 +1143,7 @@ ppc_intervals_grouped(
                                     face = "bold"))
 ```
 
-
+The above posterior prediction intervals plot the typical rental prices observed in New York's residential neighborhoods across the five boroughs. For the most part, our predictions seem really consistent! However, the coverage of our posterior predictive intervals in Brooklyn and Queens looks the best.
 
 ```{r}
 tidy(rent_model, effects = "fixed", conf.int = TRUE, conf.level = 0.8)%>% 
@@ -1286,6 +1336,7 @@ hi_rent_model <- stan_glmer(
   # prior = hs_prior,
   chains = 4, iter = 1000*2, seed = 84735, refresh = 0
 )
+
 ```
 
 $$\begin{split}
